--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /*
 Hero section polygon
 */
@@ -28,12 +27,12 @@ Hero section polygon
 
 
 .polygon-spark {
-        clip-path: polygon(100% 0, 0 0, 100% 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 13%);
     }
 
     @media (max-width: 768px) {
     .polygon-spark {
-        clip-path: polygon(0 0, 100% 0, 100% 78%, 0 31%);
+       clip-path: polygon(0 0, 100% 0, 100% 81%, 0 59%);
     }
 }
 
@@ -41,11 +40,23 @@ Hero section polygon
 
 
 .polygon-shaping {
-        clip-path: polygon(0 100%, 0 1%, 100% 69%, 100% 100%);
+    clip-path: polygon(0 0, 100% 69%, 100% 100%, 0 100%);
     }
 
     @media (max-width: 768px) {
     .polygon-shaping {
-        clip-path: polygon(0% 10%, 0% 100%, 500% 100%);
+    clip-path: polygon(0 8%, 100% 25%, 100% 100%, 0 100%);
+    }
+}
+
+
+
+.sprint-to-scale {
+    clip-path: polygon(0 0, 100% 0, 100% 11%, 0 100%);
+  }
+
+  @media (max-width: 768px) {
+    .sprint-to-scale {
+      clip-path: polygon(0 0, 0% 80%, 100% 40%, 100% 0);
     }
 }
